--- a/package.json
+++ b/package.json
@@ -1,12 +1,7 @@
 {
-  "name": "@coreui/react",
-  "version": "1.0.10",
-  "description": "Open Source Bootstrap Admin Template",
-  "author": "Łukasz Holeczek",
-  "homepage": "http://coreui.io",
-  "copyright": "Copyright 2018 creativeLabs Łukasz Holeczek",
+  "name": "gr-cartuchos",
+  "version": "1.0.0",
   "license": "MIT",
-  "private": true,
   "devDependencies": {
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
