--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-preset-env": "1.6.1",
@@ -12,6 +13,9 @@
     "copy-webpack-plugin": "4.4.1",
     "css-hot-loader": "1.3.7",
     "css-loader": "0.28.9",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.6",
     "html-loader": "0.5.5",
@@ -29,6 +33,7 @@
   "dependencies": {
     "bootstrap": "4.0.0",
     "chart.js": "2.7.2",
+    "eslint-config-standard-react": "^6.0.0",
     "flag-icon-css": "2.9.0",
     "font-awesome": "4.7.0",
     "history": "4.7.2",
