--- a/package.json
+++ b/package.json
@@ -4,46 +4,49 @@
   "license": "MIT",
   "devDependencies": {
     "babel-core": "6.26.0",
-    "babel-loader": "7.1.2",
+    "babel-loader": "7.1.4",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-preset-env": "1.6.1",
     "babel-preset-react": "6.24.1",
-    "copy-webpack-plugin": "4.4.1",
-    "css-hot-loader": "1.3.7",
-    "css-loader": "0.28.9",
+    "copy-webpack-plugin": "4.5.1",
+    "css-hot-loader": "1.3.9",
+    "css-loader": "0.28.11",
     "eslint-config-standard": "^11.0.0",
     "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.6",
+    "file-loader": "1.1.11",
     "html-loader": "0.5.5",
-    "html-webpack-plugin": "2.30.1",
-    "node-sass": "4.7.2",
+    "html-webpack-plugin": "3.2.0",
+    "mini-css-extract-plugin": "^0.4.0",
+    "node-sass": "4.8.3",
     "rimraf": "2.6.2",
-    "sass-loader": "6.0.6",
+    "sass-loader": "7.0.1",
     "source-list-map": "2.0.0",
-    "style-loader": "0.20.1",
-    "uglify-js": "3.3.10",
-    "url-loader": "0.6.2",
-    "webpack": "3.11.0",
-    "webpack-dev-server": "2.11.1"
+    "style-loader": "0.21.0",
+    "uglify-js": "3.3.22",
+    "url-loader": "1.0.1",
+    "webpack": "4.6.0",
+    "webpack-dev-server": "3.1.3",
+    "webpack-merge": "^4.1.2"
   },
   "dependencies": {
-    "bootstrap": "4.0.0",
+    "bootstrap": "4.1.0",
     "chart.js": "2.7.2",
     "eslint-config-standard-react": "^6.0.0",
-    "flag-icon-css": "2.9.0",
+    "flag-icon-css": "3.0.0",
     "font-awesome": "4.7.0",
     "history": "4.7.2",
-    "react": "16.2.0",
+    "react": "16.3.2",
     "react-chartjs-2": "2.7.0",
-    "react-dom": "16.2.0",
+    "react-dom": "16.3.2",
     "react-router-dom": "4.2.2",
-    "react-transition-group": "2.2.1",
-    "reactstrap": "5.0.0-beta",
-    "simple-line-icons": "2.4.1"
+    "react-transition-group": "2.3.1",
+    "reactstrap": "5.0.0",
+    "simple-line-icons": "2.4.1",
+    "webpack-cli": "^2.0.15"
   },
   "scripts": {
     "dev": "webpack -d --progress --watch --profile --json > compilation-stats.json --env.dev",
