--- a/package.json
+++ b/package.json
@@ -5,24 +5,22 @@
   "devDependencies": {
     "babel-core": "6.26.0",
     "babel-loader": "7.1.4",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-syntax-dynamic-import": "6.18.0",
+    "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-preset-env": "1.6.1",
     "babel-preset-react": "6.24.1",
     "copy-webpack-plugin": "4.5.1",
     "css-hot-loader": "1.3.9",
     "css-loader": "0.28.11",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-react": "^7.7.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "extract-text-webpack-plugin": "3.0.2",
+    "eslint-config-standard": "11.0.0",
+    "eslint-plugin-react": "7.7.0",
+    "eslint-plugin-standard": "3.0.1",
     "file-loader": "1.1.11",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
-    "mini-css-extract-plugin": "^0.4.0",
+    "mini-css-extract-plugin": "0.4.0",
     "node-sass": "4.8.3",
-    "rimraf": "2.6.2",
     "sass-loader": "7.0.1",
     "source-list-map": "2.0.0",
     "style-loader": "0.21.0",
@@ -30,12 +28,12 @@
     "url-loader": "1.0.1",
     "webpack": "4.6.0",
     "webpack-dev-server": "3.1.3",
-    "webpack-merge": "^4.1.2"
+    "webpack-merge": "4.1.2"
   },
   "dependencies": {
     "bootstrap": "4.1.0",
     "chart.js": "2.7.2",
-    "eslint-config-standard-react": "^6.0.0",
+    "eslint-config-standard-react": "6.0.0",
     "flag-icon-css": "3.0.0",
     "font-awesome": "4.7.0",
     "history": "4.7.2",
@@ -46,13 +44,12 @@
     "react-transition-group": "2.3.1",
     "reactstrap": "5.0.0",
     "simple-line-icons": "2.4.1",
-    "webpack-cli": "^2.0.15"
+    "webpack-cli": "2.0.15",
+    "webpack-serve": "^0.3.1"
   },
   "scripts": {
-    "dev": "webpack -d --progress --watch --profile --json > compilation-stats.json --env.dev",
-    "start": "webpack-dev-server --progress --color --inline --env.dev",
-    "build": "webpack -p --progress --env.prod",
-    "clean": "rimraf ./build"
+    "start": "webpack-dev-server --progress --color --mode development --config ./webpack.dev.js",
+    "build": "webpack -p --progress --env.prod --mode production --config ./webpack.prod.js"
   },
   "engines": {
     "node": ">= 8.9.4",
