--- a/.babelrc
+++ b/.babelrc
@@ -20,7 +20,6 @@
   ],
   "plugins": [
     "transform-object-rest-spread",
-    "transform-class-properties",
-    "syntax-dynamic-import"
+    "transform-class-properties"
   ]
 }
