--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,5 @@
 {
+  "parser": "babel-eslint",
   "extends": [
     "plugin:prettier/recommended",
     "plugin:react/recommended"
@@ -9,7 +10,15 @@
   ],
   "parserOptions": {
     "ecmaFeatures": {
-      "jsx": true
+      "jsx": true,
+      "modules": true
     }
+  },
+  "rules": {
+    "react/no-unescaped-entities": "off",
+    "react/prop-types": "off",
+    "react/jsx-no-target-blank": "off",
+    "react/display-name": "off",
+    "react/jsx-no-duplicate-props": "off"
   }
 }
