--- a/package.json
+++ b/package.json
@@ -60,11 +60,11 @@
     }
   },
   "lint-staged": {
-    "*.{scss, js}": [
+    "*.{scss, js, md}": [
       "prettier --write --single-quote=false",
       "git add"
     ],
-    "*.{js,md}": [
+    "*.{js}": [
       "npm run lint",
       "git add"
     ]
