--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
   },
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server --progress --color --mode development --config ./webpack.dev.js",
-    "build": "cross-env NODE_ENV=production webpack --mode production --config ./webpack.prod.js",
+    "build": "rm -rf build/ && cross-env NODE_ENV=production webpack --mode production --config ./webpack.prod.js",
     "lint": "eslint src/*"
   }
 }
