--- a/backend/src/config/config.json
+++ b/backend/src/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": "",
-    "database": "graphql_blog_development",
+    "database": "system_gr_2",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
