--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "GrCartuchos",
+  "name": "gr-cartuchos",
   "version": "1.0.0",
   "description": "[![Greenkeeper badge](https://badges.greenkeeper.io/PlayMa256/GrCartuchos.svg)](https://greenkeeper.io/)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "precommit": "lint-staged"
   },
   "repository": {
     "type": "git",
@@ -28,8 +29,8 @@
     }
   },
   "lint-staged": {
-    "*.{scss, js, md}": [
-      "prettier --write --single-quote=false",
+    "*.{scss,js,md,ts}": [
+      "prettier --write --single-quote=false --use-tabs --tab-width 2",
       "git add"
     ],
     "*.{js}": [
