--- a/package.json
+++ b/package.json
@@ -18,18 +18,17 @@
     "url": "https://github.com/PlayMa256/GrCartuchos/issues"
   },
   "homepage": "https://github.com/PlayMa256/GrCartuchos#readme",
-  "devDependencies": {
-    "husky": "0.14.3",
-    "lint-staged": "7.2.0",
-    "prettier": "1.14.0"
-  },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged -d"
     }
   },
   "lint-staged": {
-    "*.{scss,js,md,ts}": [
+    "*.{ts}": [
+      "prettier --parser typescript --write --single-quote=false --use-tabs --tab-width 2",
+      "git add"
+    ],
+    "*.{scss,js,md}": [
       "prettier --write --single-quote=false --use-tabs --tab-width 2",
       "git add"
     ],
@@ -37,5 +36,10 @@
       "npm run lint",
       "git add"
     ]
+  },
+  "devDependencies": {
+    "husky": "0.14.3",
+    "lint-staged": "7.2.0",
+    "prettier": "1.14.0"
   }
 }
