misc: add flow to frontend

--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -16,7 +16,8 @@
         "modules": false,
         "useBuiltIns": true
       }
-    ]
+    ],
+    "flow"
   ],
   "plugins": [
     "transform-object-rest-spread",
