feat(relay): initial setups for relay on frontend

--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -22,6 +22,7 @@
   "plugins": [
     "transform-object-rest-spread",
     "transform-class-properties",
-    "syntax-dynamic-import"
+    "syntax-dynamic-import",
+    "relay"
   ]
 }
