--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "babel-core": "6.26.3",
     "babel-eslint": "8.2.6",
     "babel-loader": "7.1.5",
+    "babel-plugin-relay": "1.6.2",
     "babel-plugin-syntax-dynamic-import": "6.18.0",
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
@@ -23,13 +24,13 @@
     "eslint-plugin-react": "7.10.0",
     "file-loader": "1.1.11",
     "flow-bin": "^0.77.0",
+    "graphql": "^0.13.2",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
-    "husky": "^1.0.0-rc.13",
-    "lint-staged": "^7.2.0",
     "mini-css-extract-plugin": "0.4.1",
     "node-sass": "4.9.2",
     "prettier": "^1.13.7",
+    "relay-compiler": "^1.6.2",
     "sass-loader": "7.0.3",
     "source-list-map": "2.0.0",
     "style-loader": "0.21.0",
@@ -50,6 +51,7 @@
     "react": "16.4.1",
     "react-chartjs-2": "2.7.4",
     "react-dom": "16.4.1",
+    "react-relay": "^1.6.2",
     "react-router-dom": "4.3.1",
     "react-transition-group": "2.4.0",
     "reactstrap": "6.3.1",
@@ -61,6 +63,7 @@
     "start": "cross-env NODE_ENV=development webpack-dev-server --progress --color --mode development --config ./webpack.dev.js",
     "build": "rm -rf build/ && cross-env NODE_ENV=production webpack --mode production --config ./webpack.prod.js",
     "lint": "eslint src/*",
-    "flow": "flow status"
+    "flow": "flow status",
+    "relay": "relay-compiler --src ./src --schema ./data/schema.graphql"
   }
 }
