--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     ]
   },
   "devDependencies": {
-    "husky": "^0.14.3",
+    "husky": "0.14.3",
     "lint-staged": "7.2.0",
     "prettier": "1.14.0"
   }
