--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,10 +7,11 @@
     "babel-core": "6.26.3",
     "babel-eslint": "8.2.6",
     "babel-loader": "7.1.5",
-    "babel-plugin-relay": "1.6.2",
+    "babel-plugin-relay": "^1.6.2",
     "babel-plugin-syntax-dynamic-import": "6.18.0",
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.7.0",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "6.24.1",
