--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "typescript": "2.9.2"
   },
   "dependencies": {
+    "cors": "^2.8.4",
     "express-graphql": "0.6.12",
     "graphql": "0.13.2",
     "graphql-tools": "3.0.5",
