--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "babel-plugin-syntax-dynamic-import": "6.18.0",
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "babel-plugin-transform-optional-chaining": "7.0.0-beta.0",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.7.0",
     "babel-preset-flow": "^6.23.0",
