--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "css-loader": "1.0.0",
     "eslint": "5.2.0",
     "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-import": "2.13.0",
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "7.10.0",
     "file-loader": "1.1.11",
@@ -32,7 +33,9 @@
     "mini-css-extract-plugin": "0.4.1",
     "node-sass": "4.9.2",
     "prettier": "^1.13.7",
+    "react-releasy": "0.0.2",
     "relay-compiler": "^1.6.2",
+    "relay-devtools": "^1.4.0",
     "sass-loader": "7.0.3",
     "source-list-map": "2.0.0",
     "style-loader": "0.21.0",
