--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "@types/sequelize": "4.27.24",
     "bcryptjs": "2.4.3",
     "express": "4.16.3",
+    "graphql-relay": "0.5.5",
     "gulp": "3.9.1",
     "gulp-clean": "0.4.0",
     "gulp-typescript": "4.0.2",
