--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,6 +52,8 @@
     "flag-icon-css": "3.0.0",
     "font-awesome": "4.7.0",
     "history": "4.7.2",
+    "moment": "2.22.2",
+    "moment-timezone": "0.5.21",
     "popper.js": "1.14.3",
     "react": "16.4.1",
     "react-chartjs-2": "2.7.4",
