--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,68 +3,62 @@
   "version": "1.0.0",
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "6.26.3",
-    "babel-eslint": "8.2.6",
-    "babel-loader": "7.1.5",
-    "babel-plugin-relay": "^1.6.2",
-    "babel-plugin-syntax-dynamic-import": "6.18.0",
-    "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-plugin-transform-optional-chaining": "7.0.0-beta.0",
-    "babel-polyfill": "6.26.0",
-    "babel-preset-env": "1.7.0",
-    "babel-preset-flow": "^6.23.0",
-    "babel-preset-react": "6.24.1",
+    "@babel/core": "7.1.2",
+    "@babel/plugin-proposal-class-properties": "7.1.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "7.0.0",
+    "@babel/polyfill": "7.0.0",
+    "@babel/preset-env": "7.1.0",
+    "@babel/preset-react": "7.0.0",
+    "babel-eslint": "10.0.1",
+    "babel-loader": "8.0.4",
+    "babel-plugin-relay": "1.6.2",
     "copy-webpack-plugin": "4.5.2",
     "cross-env": "5.2.0",
-    "css-hot-loader": "1.4.1",
+    "css-hot-loader": "1.4.2",
     "css-loader": "1.0.0",
-    "eslint": "5.2.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-import": "2.13.0",
-    "eslint-plugin-prettier": "^2.6.2",
-    "eslint-plugin-react": "7.10.0",
-    "file-loader": "1.1.11",
-    "flow-bin": "^0.77.0",
-    "graphql": "^0.13.2",
+    "eslint": "5.6.1",
+    "eslint-config-prettier": "3.1.0",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-prettier": "3.0.0",
+    "eslint-plugin-react": "7.11.1",
+    "file-loader": "2.0.0",
+    "graphql": "14.0.2",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
-    "mini-css-extract-plugin": "0.4.1",
-    "node-sass": "4.9.2",
-    "prettier": "^1.13.7",
+    "mini-css-extract-plugin": "0.4.3",
+    "node-sass": "4.9.3",
+    "prettier": "1.14.3",
     "react-releasy": "0.0.2",
     "relay-compiler": "^1.6.2",
     "relay-devtools": "^1.4.0",
-    "sass-loader": "7.0.3",
+    "sass-loader": "7.1.0",
     "source-list-map": "2.0.0",
-    "style-loader": "0.21.0",
-    "uglify-js": "3.4.6",
-    "url-loader": "1.0.1",
-    "webpack": "4.16.3",
-    "webpack-dev-server": "3.1.5",
-    "webpack-merge": "4.1.3"
-  },
-  "dependencies": {
+    "style-loader": "0.23.0",
+    "uglify-js": "3.4.9",
+    "url-loader": "1.1.1",
+    "webpack": "4.20.2",
+    "webpack-dev-server": "3.1.9",
+    "webpack-merge": "4.1.4",
     "bootstrap": "4.1.3",
     "chart.js": "2.7.2",
-    "eslint-config-standard-react": "6.0.0",
-    "flag-icon-css": "3.0.0",
+    "eslint-config-standard-react": "7.0.2",
+    "flag-icon-css": "3.2.0",
     "font-awesome": "4.7.0",
     "history": "4.7.2",
     "moment": "2.22.2",
     "moment-timezone": "0.5.21",
-    "popper.js": "1.14.3",
-    "react": "16.4.1",
+    "popper.js": "1.14.4",
+    "react": "16.5.2",
     "react-chartjs-2": "2.7.4",
-    "react-dom": "16.4.1",
-    "react-relay": "^1.6.2",
+    "react-dom": "16.5.2",
+    "react-relay": "1.6.2",
     "react-router-dom": "4.3.1",
-    "react-transition-group": "2.4.0",
-    "reactstrap": "6.3.1",
+    "react-transition-group": "2.5.0",
+    "reactstrap": "6.4.0",
     "simple-line-icons": "2.4.1",
-    "webpack-cli": "3.1.0",
-    "webpack-serve": "^2.0.2"
+    "webpack-cli": "3.1.2",
+    "webpack-serve": "2.0.2"
   },
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server --progress --color --mode development --config ./webpack.dev.js",
