feat(salesForm): correct sales creation form

--- a/backend/package.json
+++ b/backend/package.json
@@ -19,25 +19,27 @@
   "devDependencies": {
     "@types/express": "4.16.0",
     "@types/express-graphql": "0.6.1",
-    "@types/graphql": "14.0.1",
+    "@types/graphql": "0.13.3",
     "@types/jsonwebtoken": "7.2.8",
-    "@types/node": "10.11.4",
-    "@types/sequelize": "4.27.27",
+    "@types/node": "10.5.4",
+    "@types/sequelize": "4.27.24",
     "bcryptjs": "2.4.3",
     "express": "4.16.3",
     "graphql-relay": "0.5.5",
     "gulp": "3.9.1",
     "gulp-clean": "0.4.0",
-    "gulp-typescript": "5.0.0-alpha.3",
-    "mysql2": "1.6.1",
-    "nodemon": "1.18.4",
-    "sequelize": "4.39.0",
-    "sequelize-cli": "4.0.0",
-    "typescript": "3.1.1",
-    "cors": "2.8.4",
+    "gulp-typescript": "4.0.2",
+    "mysql2": "1.5.3",
+    "nodemon": "1.18.3",
+    "sequelize": "4.38.0",
+    "sequelize-cli": "^4.0.0",
+    "typescript": "2.9.2"
+  },
+  "dependencies": {
+    "cors": "^2.8.4",
     "express-graphql": "0.6.12",
-    "graphql": "14.0.2",
-    "graphql-tools": "4.0.0",
+    "graphql": "0.13.2",
+    "graphql-tools": "3.0.5",
     "jsonwebtoken": "8.3.0"
   }
 }
