--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,51 +13,51 @@
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.4",
     "babel-plugin-relay": "1.6.2",
+    "bootstrap": "4.1.3",
+    "chart.js": "2.7.2",
     "copy-webpack-plugin": "4.5.2",
     "cross-env": "5.2.0",
     "css-hot-loader": "1.4.2",
     "css-loader": "1.0.0",
     "eslint": "5.6.1",
     "eslint-config-prettier": "3.1.0",
+    "eslint-config-standard-react": "7.0.2",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-prettier": "3.0.0",
     "eslint-plugin-react": "7.11.1",
     "file-loader": "2.0.0",
+    "flag-icon-css": "3.2.0",
+    "font-awesome": "4.7.0",
     "graphql": "14.0.2",
+    "history": "4.7.2",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "0.4.3",
+    "moment": "2.22.2",
+    "moment-timezone": "0.5.21",
     "node-sass": "4.9.3",
+    "popper.js": "1.14.4",
     "prettier": "1.14.3",
+    "react": "16.5.2",
+    "react-chartjs-2": "2.7.4",
+    "react-dom": "16.5.2",
+    "react-relay": "1.6.2",
     "react-releasy": "0.0.2",
+    "react-router-dom": "4.3.1",
+    "react-transition-group": "2.5.0",
+    "reactstrap": "6.4.0",
     "relay-compiler": "^1.6.2",
     "relay-devtools": "^1.4.0",
     "sass-loader": "7.1.0",
+    "simple-line-icons": "2.4.1",
     "source-list-map": "2.0.0",
     "style-loader": "0.23.0",
     "uglify-js": "3.4.9",
     "url-loader": "1.1.1",
     "webpack": "4.20.2",
+    "webpack-cli": "3.1.2",
     "webpack-dev-server": "3.1.9",
     "webpack-merge": "4.1.4",
-    "bootstrap": "4.1.3",
-    "chart.js": "2.7.2",
-    "eslint-config-standard-react": "7.0.2",
-    "flag-icon-css": "3.2.0",
-    "font-awesome": "4.7.0",
-    "history": "4.7.2",
-    "moment": "2.22.2",
-    "moment-timezone": "0.5.21",
-    "popper.js": "1.14.4",
-    "react": "16.5.2",
-    "react-chartjs-2": "2.7.4",
-    "react-dom": "16.5.2",
-    "react-relay": "1.6.2",
-    "react-router-dom": "4.3.1",
-    "react-transition-group": "2.5.0",
-    "reactstrap": "6.4.0",
-    "simple-line-icons": "2.4.1",
-    "webpack-cli": "3.1.2",
     "webpack-serve": "2.0.2"
   },
   "scripts": {
@@ -66,5 +66,8 @@
     "lint": "eslint src/*",
     "flow": "flow status",
     "relay": "relay-compiler --src ./src --schema ./data/schema.graphql"
+  },
+  "dependencies": {
+    "react-new-window": "^0.0.9"
   }
 }
