--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,13 +58,12 @@
     "webpack-cli": "3.1.2",
     "webpack-dev-server": "3.1.10",
     "webpack-merge": "4.1.4",
-    "webpack-serve": "2.0.2"
+    "webpack-plugin-serve": "github:shellscape/webpack-plugin-serve"
   },
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-dev-server --progress --color --mode development --config ./webpack.dev.js",
+    "start": "cross-env NODE_ENV=development webpack --mode development --config ./webpack.dev.js --watch",
     "build": "rm -rf build/ && cross-env NODE_ENV=production webpack --mode production --config ./webpack.prod.js",
     "lint": "eslint src/*",
-    "flow": "flow status",
     "relay": "relay-compiler --src ./src --schema ./data/schema.graphql"
   },
   "dependencies": {
