--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "graphql-node-api-2",
+  "name": "backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -33,9 +33,7 @@
     "nodemon": "1.18.5",
     "sequelize": "4.41.0",
     "sequelize-cli": "^5.2.0",
-    "typescript": "2.9.2"
-  },
-  "dependencies": {
+    "typescript": "2.9.2",
     "cors": "^2.8.4",
     "express-graphql": "0.7.0",
     "graphql": "0.13.2",
