--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,7 +58,7 @@
     "webpack-cli": "3.1.2",
     "webpack-dev-server": "3.1.10",
     "webpack-merge": "4.1.5",
-    "webpack-plugin-serve": "github:shellscape/webpack-plugin-serve"
+    "webpack-plugin-serve": "0.2.1"
   },
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack --mode development --config ./webpack.dev.js --watch",
